--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>ALUMI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="./images/logo-ico.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" type="text/css" media="screen" href="script.css" />
     <script src="script.js"></script>
   </head>
   <body>
     <div class="container">
-
       <div class="menu" id="menu">
         <ul class="menu-items">
           <li>
@@ -31,19 +35,20 @@
         </ul>
 
         <div class="menu-description">
-          <h1 class="menu-title">alumi</h1>
-
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
-          doloremque natus fuga facere vero magni nesciunt ratione consectetur
-          repudiandae doloribus in, impedit obcaecati sunt veritatis inventore
-          ducimus culpa repellat! Eveniet!
+          <img src="./images/logo.png" alt="" class="logo" />
+          <h2 class="sub-title">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          </h2>
+          <a href="#who-are">
+            <img src="./images/down-arrow.svg" alt="" class="arrow" />
+          </a>
         </div>
       </div>
 
       <div class="who-are" id="who-are">
         <div class="who-are-card">
-          <h3 class="who-are-title">quem somos</h3>
-          <img src="./images/quem_somos.svg" alt="" class="who-are-icon" />
+          <img src="./images/quem-somos.svg" alt="" class="who-are-icon" />
+          <h3 class="who-are-title">Quem somos</h3>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem
           eligendi voluptatibus temporibus reiciendis amet fuga itaque odit,
           facilis maxime, ut ex neque totam sunt iste vel. Nobis corporis
@@ -51,8 +56,8 @@
         </div>
 
         <div class="who-are-card">
-          <h3 class="who-are-title">o que fazemos</h3>
           <img src="./images/o-que.svg" alt="" class="who-are-icon" />
+          <h3 class="who-are-title">O que fazemos</h3>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem
           eligendi voluptatibus temporibus reiciendis amet fuga itaque odit,
           facilis maxime, ut ex neque totam sunt iste vel. Nobis corporis
@@ -60,8 +65,8 @@
         </div>
 
         <div class="who-are-card">
-          <h3 class="who-are-title">como fazemos</h3>
-          <img src="./images/como_fazemos.svg" alt="" class="who-are-icon" />
+          <img src="./images/como-fazemos.svg" alt="" class="who-are-icon" />
+          <h3 class="who-are-title">Como fazemos</h3>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem
           eligendi voluptatibus temporibus reiciendis amet fuga itaque odit,
           facilis maxime, ut ex neque totam sunt iste vel. Nobis corporis
@@ -72,43 +77,78 @@
       <div class="cases" id="cases">
         <div class="case-item">
           <div class="case-description">
-            <h4 class="case-name">maria nazaré</h4>
-            <img src="./images/person1.svg" alt="" class="person" />
+            <img src="./images/person.png" alt="" class="person" />
+            <h4 class="case-name">Julia Fonseca</h4>
+            <h4 class="case-text">
+              Leia seus resultados de forma fácil e intuitiva
+            </h4>
           </div>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat a
-          voluptatum soluta nihil mollitia fugit sunt deserunt.
         </div>
 
         <div class="case-item">
           <div class="case-description">
-            <h4 class="case-name">henrique césar</h4>
-            <img src="./images/person4.svg" alt="" class="person" />
+            <img src="./images/person.png" alt="" class="person" />
+            <h4 class="case-name">Julia Fonseca</h4>
+            <h4 class="case-text">
+              Leia seus resultados de forma fácil e intuitiva
+            </h4>
           </div>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat a
-          voluptatum soluta nihil mollitia fugit sunt deserunt.
         </div>
 
         <div class="case-item">
           <div class="case-description">
-            <h4 class="case-name">ana júlia</h4>
-            <img src="./images/person3.svg" alt="" class="person" />
+            <img src="./images/person.png" alt="" class="person" />
+            <h4 class="case-name">Julia Fonseca</h4>
+            <h4 class="case-text">
+              Leia seus resultados de forma fácil e intuitiva
+            </h4>
           </div>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat a
-          voluptatum soluta nihil mollitia fugit sunt deserunt.
         </div>
       </div>
 
-      <div class="register" id="register">
-        <div class="register-artisian">
-          <h2 class="register-title">artesão</h2>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          <button>cadastrar</button>
+      <h1 class="products-title">Nossos produtos</h1>
+      <div class="products">
+        <div class="products-items">
+          <img src="./images/produto.png" alt="" class="product-image" />
+          <h3 class="product-description">Bolsa Agreste</h3>
+          <h2 class="product-price">R$30,00</h2>
+          <a class="style-button" href="#">compre agora</a>
         </div>
 
-        <div class="register-buyer">
-          <h2 class="register-title">comprador</h2>
+        <div class="products-items">
+          <img src="./images/produto.png" alt="" class="product-image" />
+          <h3 class="product-description">Bolsa Agreste</h3>
+          <h2 class="product-price">R$30,00</h2>
+          <a class="style-button" href="#">compre agora</a>
+        </div>
+
+        <div class="products-items">
+          <img src="./images/produto.png" alt="" class="product-image" />
+          <h3 class="product-description">Bolsa Agreste</h3>
+          <h2 class="product-price">R$30,00</h2>
+          <a class="style-button" href="#" s>compre agora</a>
+        </div>
+
+        <a href="" class="product-link">
+          <h2 class="product-subtitle">CONHEÇA NOSSA LOJA</h2>
+        </a>
+      </div>
+
+      <div class="register" id="register">
+        <h2 class="register-title">cadastre-se</h2>
+<div class="oi">
+        <div class="register-items">
+          <h2 class="register-title">artesão</h2>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          <button>cadastrar</button>
+          <a class="style-button" href="#" s>cadastrar</a>
+          
+        </div>
+        <div class="register-items">
+          <h2 class="register-title">artesão</h2>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          <a class="style-button" href="#" s>cadastrar</a>
+          
+        </div>
         </div>
       </div>
 
@@ -119,7 +159,6 @@
           <a href="" class="linkedin"></a>
         </div>
       </div>
-
     </div>
   </body>
 </html>
