--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-description">
           <img src="./images/logo.png" alt="" class="logo" />
           <h2 class="sub-title">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Traçando novos cainhos através de produtos de economia criativa e sustentável.
           </h2>
           <a href="#who-are">
             <img src="./images/down-arrow.svg" alt="" class="arrow" />
